[package]
name = "imetadata"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
plist = "1.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
zip = "1.2.3"
