[package]
name = "imetadata"
version = "0.1.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.17", features = ["full", "tokio"] }
clap = { version = "4.5.4", features = ["derive"] }
crc = "3.2.1"
flate2 = { version = "1.0.30", features = ["default"] }
inflate = "0.4.5"
num_cpus = "1.16.0"
plist = "1.6.1"
png = "0.17.13"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing", "tracing-serde", "env-filter"] }
zip = "1.2.3"
